--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,20 @@
 }
 
 body{
-  padding-top: 68px;
   font-family: estedad;
+  background: #e6e5e5;
 }
 
+#about{
+  background: #000;
+  color: aliceblue;
+ 
+}
+
+.slidemar{
+  margin-top: 200px;
+  margin-bottom: 50px;
+}
 .navbar-blur {
   background-color: rgba(255, 255, 255, 0.5); 
   backdrop-filter: blur(10px);               
@@ -152,4 +162,8 @@ body{
   filter: drop-shadow(0 10px 20px rgba(0,0,0,0.5));
 }
 
-
+.odometer {
+  direction: rtl !important;
+  text-align: center !important;
+  color: rgb(72, 78, 88);
+}
